--- a/src/components/layout/NavbarPages.astro
+++ b/src/components/layout/NavbarPages.astro
@@ -6,7 +6,7 @@ import { Home, Info, ShoppingCart, Truck, Calendar, MessageCircle, Menu, X, Face
 const menuItems = [
   { text: 'Granjas Maysol', href: '/', icon: Home },
   { text: 'Nosotros', href: '/nosotros', icon: Info },
-  { text: 'Productos', href: '/#productos', icon: ShoppingCart },
+  { text: 'Productos', href: '/productos', icon: ShoppingCart },
   { text: 'Servicios', href: '/#servicios', icon: Truck },
   { text: 'Noticias', href: '/noticias', icon: Calendar },
   { text: 'Contacto', href: '/#contacto', icon: MessageCircle }
