update 9/4 con filtros de productos

--- a/src/components/layout/NavbarPages.astro
+++ b/src/components/layout/NavbarPages.astro
@@ -5,7 +5,7 @@ import { Home, Info, ShoppingCart, Truck, Calendar, MessageCircle, Menu, X, Face
 // 🎯 Datos del menú
 const menuItems = [
   { text: 'Granjas Maysol', href: '/', icon: Home },
-  { text: 'Nosotros', href: '/nosotros', icon: Info },
+  { text: 'Nosotros', href: '/acerca-de-maysol', icon: Info },
   { text: 'Productos', href: '/productos', icon: ShoppingCart },
   { text: 'Servicios', href: '/#servicios', icon: Truck },
   { text: 'Noticias', href: '/noticias', icon: Calendar },
