--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,7 +70,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
-  <body class="min-h-screen bg-base-100 font-sans">
+  <body class="min-h-screen bg-base-100 font-sans max-w-[1600px] mx-auto">
     <slot />
   </body>
 </html>
